# bitcrusher-chess-engine

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  export-compile-commands.lua  premake5.lua  premake5_helper_functions.lua  vcpkg.json
.githooks/: pre-commit
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  benchmark_helper_functions.cpp  benchmark_helper_functions.hpp  evaluation_benchmarks.cpp  fen_formatter_benchmarks.cpp  move_generator_benchmarks.cpp  perft_benchmark.cpp  premake5.lua  search_threading_benchmarks.cpp
build-openbench/: Makefile
data/epd/: Eigenmann_Rapid_Engine_Test_uci.epd  quite_move.epd
data/fens/: BM_QuietMoveBenchmarksFen.txt  checks_and_pins.fen  double_check.fen  wkc.txt
debug-tools/: move_generation_debugger.py
debug_logs/: engine_log.txt
scripts/: README.md  _setup_env.bat  build_engine_benchmarks.bat  build_engine_benchmarks.sh  build_engine_tournament.bat  build_engine_tournament.sh  clean_workspace.bat  clean_workspace.sh  compare_benchmarks.py  create_compile_commands.bat  create_compile_commands.sh  estimate_elo.py  fastchess_compliance.bat  fastchess_compliance.sh  fastchess_vs_sf.bat  fastchess_vs_sf.sh  format_code.bat  format_code.sh  generate_docs.bat  generate_docs.sh  install_hooks.bat  install_hooks.sh  lint_code.bat  lint_code.sh  run_all_tests.bat  run_all_tests.sh  run_benchmark_comparison.bat  run_benchmark_comparison.sh  run_benchmarks.bat  run_benchmarks.sh  run_elo_test.bat  run_elo_test.sh  run_elo_test_ltc.bat  run_elo_test_stc.bat  run_eret_tests.bat  run_tests.bat  run_tests.sh  run_tests_debug.bat  run_tests_debug.sh  run_tests_no_bmi2.bat  (+10 more)
src/engine/: CMakeLists.txt  premake5.lua
src/engine/include/: bitboard.h  bitboard_conversions.hpp  bitboard_enums.hpp  bitboard_offsets.hpp  bitboard_utils.hpp  board_state.h  board_state.hpp  checks_pins_detection.hpp  concepts.hpp  constants.hpp  debug.hpp  diagonal_bitboards.hpp  evaluation.hpp  fen_formatter.h  fen_formatter.hpp  file_rank_bitboards.hpp  move.h  move.hpp  move_maker.h  move_processor.hpp  move_sink.hpp  pawn_moves.hpp  perft.hpp  restriction_context.hpp  search.hpp  search_manager.hpp  transposition_table.hpp  zobrist_hash_keys.hpp  zobrist_hasher.hpp
src/engine/include/attack_generators/: diagonal_slider_attacks.hpp  king_attacks.hpp  knight_attacks.hpp  pawn_attacks.hpp  shared_slider_attacks.hpp  squares_attacked.hpp
src/engine/include/attacks/: diagonal_slider_attacks.hpp  horizontal_vertical_slider_attacks.hpp  king_attacks.hpp  knight_attacks.hpp  pawn_attacks.hpp
src/engine/include/bitboards/: bitboard_conversions.hpp  bitboard_enums.hpp
src/engine/include/board/: board_state.hpp  zobrist_hasher.hpp
src/engine/include/heuristics/: heuristics.hpp  search_config.hpp
src/engine/include/heuristics/move_ordering/: score_moves.hpp
src/engine/include/heuristics/pruning/: mate_distance.hpp
src/engine/include/legal_move_generators/: bishop_legal_moves.hpp  king_legal_moves.hpp  knight_legal_moves.hpp  legal_moves_generator.hpp  move_generation_from_bitboard.hpp  pawn_legal_moves.hpp  pext_bitboards.hpp  queen_legal_moves.hpp  rook_legal_moves.hpp  shared_move_generation.hpp
src/engine/include/legal_moves/: bishop_legal_moves.hpp  king_legal_moves.hpp  knight_legal_moves.hpp  legal_moves_generator.hpp  pawn_legal_moves.hpp  queen_legal_moves.hpp  rook_legal_moves.hpp
src/engine/include/moves/: move.hpp  move_processor.hpp  move_sink.hpp
src/engine/include/search/: search.hpp  search_manager.hpp  transposition_table.hpp
src/uci/: CMakeLists.txt  engine_debug_logger.hpp  premake5.lua  uci.cpp  uci_constants.hpp  uci_handler.hpp
tests/: CMakeLists.txt  premake5.lua
web/: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  engine.py  main.py  models.py  pyproject.toml
web/bindings/: .clangd  CMakeLists.txt  chess_module.cpp
web/frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
web/frontend/src/: AnalysisTab.tsx  App.css  App.tsx  PlayTab.tsx  api.ts
web/frontend/src/components/: EngineStats.tsx  EvalBar.tsx  GameControls.tsx  MoveHistory.tsx
web/frontend/src/hooks/: useBoardSize.ts
web/load_tests/: locustfile.py  pyproject.toml
web/tests/: conftest.py  mock_chess_engine.py  test_endpoints.py  test_models.py
(+19 files in other folders)
